Update visual, add profile page and various minor changes

--- a/accounts/templates/accounts/auth.html
+++ b/accounts/templates/accounts/auth.html
@@ -1,16 +1,14 @@
 <head>
 <style>
-    .pretty{
-        background-color: lightblue;
-        width: 700px;
-        margin-left: calc(50% - 350px);
-        margin-top: -8px;
-    }
+
 </style>
 </head>
 
 
+{% include 'base.html' %}
+
 <div class="pretty">
+
     <center>
         <h1>{{ title}}</h1>
 
