--- a/templates/pages/delete-tweet.html
+++ b/templates/pages/delete-tweet.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1 class="text-center">Message succesfully deleted</h1>
+<h1 class="text-center">tweet succesfully deleted</h1>
 <br><br>
 
 
