--- a/templates/pages/tweet-page.html
+++ b/templates/pages/tweet-page.html
@@ -4,7 +4,7 @@
     {% if content %}
 
         <div class="text-center">
-            <h1>This is message N{{id}} : </h1>
+            <h1>This is tweet N{{id}} : </h1>
         </div>
         
         <div class="col-12 col-md-10 mx-auto border rounded py-3 mb-4 " style="width: 50%;">
