--- a/templates/pages/search-tweets.html
+++ b/templates/pages/search-tweets.html
@@ -9,17 +9,17 @@
         <br>
 </div>
         
-        {% for message in messages %}
-            <div class="col-12 col-md-12 mx-auto border rounded py-2 mb-4 " style="width: 50%;">
+        {% for tweet in tweets %}
+            <div class="custom-container" style="width: 50%;">
 
                 <strong style="margin-left: 20px;">
-                    {{ message.user }} 
+                    {{ tweet.user }} 
                 </strong>
 
-                <p style = "text-indent:20px;">{{ message.content }}</p>   
+                <p style = "text-indent:20px;">{{ tweet.content }}</p>   
 
-                {% if message.user == user %}
-                <a href="{% url 'delete_post' message.id %}" style="margin-left: 20px;">
+                {% if tweet.user == user %}
+                <a href="{% url 'delete_post' tweet.id %}" style="margin-left: 20px;">
                     (Delete)
                 </a>    
                 {% endif %}
@@ -32,7 +32,7 @@
 
     {% else %}
     <br>
-        <h1>You Forgot To Search For A Message...</h1>
+        <h1>You Forgot To Search For A tweet...</h1>
     {% endif %}
 </div>
 {% endblock content %}
