--- a/templates/tweets/forms.html
+++ b/templates/tweets/forms.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<form class="text-center" method="POST" >
+<form class="text-center" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Click to save message</button>
+    <button type="submit">Click to save tweet</button>
 </form>
     
 <p class="text-center">
