Implemented profile edit and tweet like functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,10 +34,22 @@
         height: auto;      /* Maintains the aspect ratio of the image */
         display: block;    /* Removes any extra spacing below the image */
         margin: 0 auto;    /* Centers the image within its container */
-    }
+      }
+    				                
+      				                
+      
+      .avatar{
+      width:200px;
+      height:200px;
+      }				              
+      
+
   </style>
   </head>
+
+  
   <body style="background-color: #cce1ff;">
+
     {% include "components/navbar.html" %}
     {% block content %}
     {% endblock content %}
