--- a/templates/pages/search-tweets.html
+++ b/templates/pages/search-tweets.html
@@ -19,7 +19,7 @@
                 <p style = "text-indent:20px;">{{ tweet.content }}</p>   
 
                 {% if tweet.user == user %}
-                <a href="{% url 'delete_post' tweet.id %}" style="margin-left: 20px;">
+                <a href="{% url 'delete_post' tweet.id %}" style="margin-left: 20px;" onclick="return confirm('Are you sure you want to permanently remove this post?')">
                     (Delete)
                 </a>    
                 {% endif %}
