--- a/templates/pages/delete-tweet.html
+++ b/templates/pages/delete-tweet.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-<h1 class="text-center">tweet succesfully deleted</h1>
+<br> 
+<h1 class="text-center">Tweet succesfully deleted</h1>
 <br><br>
 
 
