--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -38,22 +38,8 @@
             
             <div class="custom-container" style="width: 50%;">
 
-                <a href="{% url 'user_profile' username=tweet.user %}" style="margin-left: 20px;">{{ tweet.user }}</a>
-
-                <p style = "text-indent:20px;">{{ tweet.content }}</p>   
-
-                <p style = "text-indent:20px;">
-                    {% if tweet.image %}
-                        <img width="300" height="300" src="{{ tweet.image.url }}" alt="Tweet Image">
-                    {% endif %}
-                </p>   
-
-                {% if tweet.user == user %}
-                    <a href="{% url 'delete_post' tweet.id %}" style="margin-left: 20px;" onclick="return confirm('Are you sure you want to permanently remove this post?')">
-                        (Delete)
-                    </a>    
-                {% endif %}
-
+                {% include 'includes/tweet.html' with tweet=tweet %}
+                
             </div>
 
         {% endfor %}
